inc/quiche.pp


    { Returns true if the connection handshake is complete. }
(* Const before type ignored *)
    function quiche_conn_is_established(conn:Pquiche_conn):bool;

    { Returns true if the connection has a pending handshake that has progressed }
    { enough to send or receive early data. }
(* Const before type ignored *)
    function quiche_conn_is_in_early_data(conn:Pquiche_conn):bool;

    { Returns whether there is stream or DATAGRAM data available to read. }
(* Const before type ignored *)
    function quiche_conn_is_readable(conn:Pquiche_conn):bool;

    { Returns true if the connection is draining. }
(* Const before type ignored *)
    function quiche_conn_is_draining(conn:Pquiche_conn):bool;

    { Returns the number of bidirectional streams that can be created }
    { before the peer's stream count limit is reached. }
(* Const before type ignored *)
    function quiche_conn_peer_streams_left_bidi(conn:Pquiche_conn):uint64_t;

    { Returns the number of unidirectional streams that can be created }
    { before the peer's stream count limit is reached. }
(* Const before type ignored *)
    function quiche_conn_peer_streams_left_uni(conn:Pquiche_conn):uint64_t;

    { Returns true if the connection is closed. }
(* Const before type ignored *)
    function quiche_conn_is_closed(conn:Pquiche_conn):bool;

    { Returns true if the connection was closed due to the idle timeout. }
(* Const before type ignored *)
    function quiche_conn_is_timed_out(conn:Pquiche_conn):bool;

    { Returns true if a connection error was received, and updates the provided }
    { parameters accordingly. }
(* Const before type ignored *)
(* Const before type ignored *)
    function quiche_conn_peer_error(conn:Pquiche_conn; is_app:Pbool; error_code:Puint64_t; reason:PPuint8_t; reason_len:Psize_t):bool;

    { Returns true if a connection error was queued or sent, and updates the provided }
    { parameters accordingly. }
(* Const before type ignored *)
(* Const before type ignored *)
    function quiche_conn_local_error(conn:Pquiche_conn; is_app:Pbool; error_code:Puint64_t; reason:PPuint8_t; reason_len:Psize_t):bool;

    { Fetches the next stream from the given iterator. Returns false if there are }
    { no more elements in the iterator. }
    function quiche_stream_iter_next(iter:Pquiche_stream_iter; stream_id:Puint64_t):bool;

    { Frees the given stream iterator object. }
    procedure quiche_stream_iter_free(iter:Pquiche_stream_iter);

    { The number of QUIC packets received on this connection. }
    { The number of QUIC packets sent on this connection. }
    { The number of QUIC packets that were lost. }
    { The number of sent QUIC packets with retransmitted data. }
    { The number of sent bytes. }
    { The number of received bytes. }
    { The number of bytes lost. }
    { The number of stream bytes retransmitted. }
    { The number of known paths for the connection. }

    { Collects and returns statistics about the connection. }
(* Const before type ignored *)

    procedure quiche_conn_stats(conn:Pquiche_conn; out_stat:Pquiche_stats);

    { The maximum idle timeout. }
    { The maximum UDP payload size. }
    { The initial flow control maximum data for the connection. }
    { The initial flow control maximum data for local bidirectional streams. }
    { The initial flow control maximum data for remote bidirectional streams. }
    { The initial flow control maximum data for unidirectional streams. }
    { The initial maximum bidirectional streams. }
    { The initial maximum unidirectional streams. }
    { The ACK delay exponent. }
    { The max ACK delay. }
    { Whether active migration is disabled. }
    { The active connection ID limit. }
    { DATAGRAM frame extension parameter, if any. }

    { Returns the peer's transport parameters in |out|. Returns false if we have }
    { not yet processed the peer's transport parameters. }
(* Const before type ignored *)

    function quiche_conn_peer_transport_params(conn:Pquiche_conn; out_params:Pquiche_transport_params):bool;

    { The local address used by this path. }
    { The peer address seen by this path. }
    { The validation state of the path. }
    { Whether this path is active. }
    { The number of QUIC packets received on this path. }
    { The number of QUIC packets sent on this path. }
    { The number of QUIC packets that were lost on this path. }
    { The number of sent QUIC packets with retransmitted data on this path. }
    { The estimated round-trip time of the path (in nanoseconds). }
    { The size of the path's congestion window in bytes. }
    { The number of sent bytes on this path. }
    { The number of received bytes on this path. }
    { The number of bytes lost on this path. }
    { The number of stream bytes retransmitted on this path. }
    { The current PMTU for the path. }
    { The most recent data delivery rate estimate in bytes/s. }

    { Collects and returns statistics about the specified path for the connection. }
    { }
    { The `idx` argument represent the path's index (also see the `paths_count` }
    { field of `quiche_stats`). }
(* Const before type ignored *)

    function quiche_conn_path_stats(conn:Pquiche_conn; idx:size_t; out_stat:Pquiche_path_stats):longint;

    { Returns whether or not this is a server-side connection. }
(* Const before type ignored *)
    function quiche_conn_is_server(conn:Pquiche_conn):bool;

    { Returns the maximum DATAGRAM payload that can be sent. }
(* Const before type ignored *)
    function quiche_conn_dgram_max_writable_len(conn:Pquiche_conn):ssize_t;

    { Returns the length of the first stored DATAGRAM. }
(* Const before type ignored *)
    function quiche_conn_dgram_recv_front_len(conn:Pquiche_conn):ssize_t;

    { Returns the number of items in the DATAGRAM receive queue. }
(* Const before type ignored *)
    function quiche_conn_dgram_recv_queue_len(conn:Pquiche_conn):ssize_t;

    { Returns the total size of all items in the DATAGRAM receive queue. }
(* Const before type ignored *)
    function quiche_conn_dgram_recv_queue_byte_size(conn:Pquiche_conn):ssize_t;

    { Returns the number of items in the DATAGRAM send queue. }
(* Const before type ignored *)
    function quiche_conn_dgram_send_queue_len(conn:Pquiche_conn):ssize_t;

    { Returns the total size of all items in the DATAGRAM send queue. }
(* Const before type ignored *)
    function quiche_conn_dgram_send_queue_byte_size(conn:Pquiche_conn):ssize_t;

    { Reads the first received DATAGRAM. }
    function quiche_conn_dgram_recv(conn:Pquiche_conn; buf:Puint8_t; buf_len:size_t):ssize_t;

    { Sends data in a DATAGRAM frame. }
(* Const before type ignored *)
    function quiche_conn_dgram_send(conn:Pquiche_conn; buf:Puint8_t; buf_len:size_t):ssize_t;

    { Purges queued outgoing DATAGRAMs matching the predicate. }
    procedure quiche_conn_dgram_purge_outgoing(conn:Pquiche_conn; f:TFunctionMatching);

    { Schedule an ack-eliciting packet on the active path. }
    function quiche_conn_send_ack_eliciting(conn:Pquiche_conn):ssize_t;

    { Schedule an ack-eliciting packet on the specified path. }
(* Const before type ignored *)
(* Const before type ignored *)
    function quiche_conn_send_ack_eliciting_on_path(conn:Pquiche_conn; local:Psockaddr; local_len:size_t; peer:Psockaddr; peer_len:size_t):ssize_t;

    { Frees the connection object. }
    procedure quiche_conn_free(conn:Pquiche_conn);

    { Writes an unsigned variable-length integer in network byte-order into }
    { the provided buffer. }
    function quiche_put_varint(buf:Puint8_t; buf_len:size_t; val:uint64_t):longint;

    { Reads an unsigned variable-length integer in network byte-order from }
    { the provided buffer and returns the wire length. }
(* Const before type ignored *)
    function quiche_get_varint(buf:Puint8_t; buf_len:size_t; val:uint64_t):ssize_t;

    { HTTP/3 API }
    { }
    { List of ALPN tokens of supported HTTP/3 versions. }
    const
      QUICHE_H3_APPLICATION_PROTOCOL = '\x02h3';      
    { There is no error or no work to do }
    { The provided buffer is too short. }
    { Internal error in the HTTP/3 stack. }
    { Endpoint detected that the peer is exhibiting behavior that causes. }
    { excessive load. }
    { Stream ID or Push ID greater that current maximum was }
    { used incorrectly, such as exceeding a limit, reducing a limit, }
    { or being reused. }
    { The endpoint detected that its peer created a stream that it will not }
    { accept. }
    { A required critical stream was closed. }
    { No SETTINGS frame at beginning of control stream. }
    { A frame was received which is not permitted in the current state. }
    { Frame violated layout or size rules. }
    { QPACK Header block decompression failure. }
    { -12 was previously used for TransportError, skip it }
    { The underlying QUIC stream (or connection) doesn't have enough capacity }
    { for the operation to complete. The application should retry later on. }
    { Error in the payload of a SETTINGS frame. }
    { Server rejected request. }
    { Request or its response cancelled. }
    { Client's request stream terminated without containing a full-formed }
    { request. }
    { An HTTP message was malformed and cannot be processed. }
    { The TCP connection established in response to a CONNECT request was }
    { reset or abnormally closed. }
    { The requested operation cannot be served over HTTP/3. Peer should retry }
    { over HTTP/1.1. }
    { The following QUICHE_H3_TRANSPORT_ERR_* errors are propagated }
    { from the QUIC transport layer. }
    { See QUICHE_ERR_DONE. }
    { See QUICHE_ERR_BUFFER_TOO_SHORT. }
    { See QUICHE_ERR_UNKNOWN_VERSION. }
    { See QUICHE_ERR_INVALID_FRAME. }
    { See QUICHE_ERR_INVALID_PACKET. }
    { See QUICHE_ERR_INVALID_STATE. }
    { See QUICHE_ERR_INVALID_STREAM_STATE. }
    { See QUICHE_ERR_INVALID_TRANSPORT_PARAM. }
    { See QUICHE_ERR_CRYPTO_FAIL. }
    { See QUICHE_ERR_TLS_FAIL. }
    { See QUICHE_ERR_FLOW_CONTROL. }
    { See QUICHE_ERR_STREAM_LIMIT. }
    { See QUICHE_ERR_STREAM_STOPPED. }
    { See QUICHE_ERR_STREAM_RESET. }
    { See QUICHE_ERR_FINAL_SIZE. }
    { See QUICHE_ERR_CONGESTION_CONTROL. }
    { See QUICHE_ERR_ID_LIMIT. }
    { See QUICHE_ERR_OUT_OF_IDENTIFIERS. }
    { See QUICHE_ERR_KEY_UPDATE. }
